--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.username=root
 spring.datasource.password=shanuka1998
 spring.jpa.show.sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+jwt.secret=VGhpcyBpcyBhIHZlcnkgc3Ryb25nIHNlY3JldCBrZXkgZm9yIEpXVCE
